# lattice-sdk-cpp

./: CMakeLists.txt  LICENSE.md  README.md  third-party-license.txt
protos/anduril/entitymanager/v1/: classification.pub.proto  contact_details.pub.proto  correlations.pub.proto  dimensions.pub.proto  entities_openapi_model.gen.yaml  entity.pub.proto  entity_manager_grpcapi.pub.proto  entity_manager_openapi.pub.yaml  filter.pub.proto  filter_dynamic.pub.proto  geoentity.pub.proto  group.pub.proto  health_status.pub.proto  location.pub.proto  media.pub.proto  notification.pub.proto  ontology.pub.proto  options.pub.proto  orbit.pub.proto  payloads.pub.proto  power.pub.proto  rate_limit.pub.proto  relationship.pub.proto  route_details.pub.proto  schedule.pub.proto  sensors.pub.proto  signal.pub.proto  supplies.pub.proto  target_priority.pub.proto  transponder_codes.pub.proto  types.pub.proto
protos/anduril/ontology/v1/: type.pub.proto
protos/anduril/taskmanager/v1/: generic_spec.pub.proto  task.pub.proto  task_api.pub.proto  task_manager_grpcapi.pub.proto  tasks_openapi_model.gen.yaml
protos/anduril/tasks/ad/desertguardian/common/v1/: common_tasks.pub.proto
protos/anduril/tasks/ad/desertguardian/rf/v1/: rf_tasks.pub.proto
protos/anduril/tasks/v2/: catalog.pub.proto  common.pub.proto  objective.pub.proto
protos/anduril/tasks/v2/shared/: isr.pub.proto  maneuver.pub.proto  strike.pub.proto
protos/anduril/type/: attribution.pub.proto  color.pub.proto  coords.pub.proto  geometry.pub.proto  orbit.pub.proto
protos/entitymanager/v1/: group.pub.proto  media.pub.proto  notification.pub.proto  openapi-em-model.gen.yaml
protos/taskmanager/v1/: openapi-tm-model.gen.yaml
src/anduril/auth/v2/: idp.pub.grpc.pb.cc  idp.pub.grpc.pb.h  idp.pub.pb.cc  idp.pub.pb.h  tokens.pub.grpc.pb.cc  tokens.pub.grpc.pb.h  tokens.pub.pb.cc  tokens.pub.pb.h
src/anduril/blobs/v1/: blobs_api.pub.grpc.pb.cc  blobs_api.pub.grpc.pb.h  blobs_api.pub.pb.cc  blobs_api.pub.pb.h  common.pub.grpc.pb.cc  common.pub.grpc.pb.h  common.pub.pb.cc  common.pub.pb.h  filter.pub.grpc.pb.cc  filter.pub.grpc.pb.h  filter.pub.pb.cc  filter.pub.pb.h
src/anduril/communicationsmanager/v1/: blobs.pub.grpc.pb.cc  blobs.pub.grpc.pb.h  blobs.pub.pb.cc  blobs.pub.pb.h  common.pub.grpc.pb.cc  common.pub.grpc.pb.h  common.pub.pb.cc  common.pub.pb.h  communications_manager_api.pub.grpc.pb.cc  communications_manager_api.pub.grpc.pb.h  communications_manager_api.pub.pb.cc  communications_manager_api.pub.pb.h  cross_domain.pub.grpc.pb.cc  cross_domain.pub.grpc.pb.h  cross_domain.pub.pb.cc  cross_domain.pub.pb.h  entity.pub.grpc.pb.cc  entity.pub.grpc.pb.h  entity.pub.pb.cc  entity.pub.pb.h  integration.pub.grpc.pb.cc  integration.pub.grpc.pb.h  integration.pub.pb.cc  integration.pub.pb.h
src/anduril/entityhistory/v1/: entity_history_api.pub.grpc.pb.cc  entity_history_api.pub.grpc.pb.h  entity_history_api.pub.pb.cc  entity_history_api.pub.pb.h  history.pub.grpc.pb.cc  history.pub.grpc.pb.h  history.pub.pb.cc  history.pub.pb.h
src/anduril/entitymanager/v1/: classification.pub.grpc.pb.cc  classification.pub.grpc.pb.h  classification.pub.pb.cc  classification.pub.pb.h  contact_details.pub.grpc.pb.cc  contact_details.pub.grpc.pb.h  contact_details.pub.pb.cc  contact_details.pub.pb.h  correlations.pub.grpc.pb.cc  correlations.pub.grpc.pb.h  correlations.pub.pb.cc  correlations.pub.pb.h  dimensions.pub.grpc.pb.cc  dimensions.pub.grpc.pb.h  dimensions.pub.pb.cc  dimensions.pub.pb.h  entity.pub.grpc.pb.cc  entity.pub.grpc.pb.h  entity.pub.pb.cc  entity.pub.pb.h  entity_manager_api.pub.grpc.pb.cc  entity_manager_api.pub.grpc.pb.h  entity_manager_api.pub.pb.cc  entity_manager_api.pub.pb.h  entity_manager_grpcapi.pub.grpc.pb.cc  entity_manager_grpcapi.pub.grpc.pb.h  entity_manager_grpcapi.pub.pb.cc  entity_manager_grpcapi.pub.pb.h  filter.pub.grpc.pb.cc  filter.pub.grpc.pb.h  filter.pub.pb.cc  filter.pub.pb.h  filter_dynamic.pub.grpc.pb.cc  filter_dynamic.pub.grpc.pb.h  filter_dynamic.pub.pb.cc  filter_dynamic.pub.pb.h  geoentity.pub.grpc.pb.cc  geoentity.pub.grpc.pb.h  geoentity.pub.pb.cc  geoentity.pub.pb.h  (+84 more)
src/anduril/ontology/v1/: type.pub.grpc.pb.cc  type.pub.grpc.pb.h  type.pub.pb.cc  type.pub.pb.h
src/anduril/taskmanager/v1/: generic_spec.pub.grpc.pb.cc  generic_spec.pub.grpc.pb.h  generic_spec.pub.pb.cc  generic_spec.pub.pb.h  task.pub.grpc.pb.cc  task.pub.grpc.pb.h  task.pub.pb.cc  task.pub.pb.h  task_api.pub.grpc.pb.cc  task_api.pub.grpc.pb.h  task_api.pub.pb.cc  task_api.pub.pb.h  task_manager_api.pub.grpc.pb.cc  task_manager_api.pub.grpc.pb.h  task_manager_api.pub.pb.cc  task_manager_api.pub.pb.h  task_manager_grpcapi.pub.grpc.pb.cc  task_manager_grpcapi.pub.grpc.pb.h  task_manager_grpcapi.pub.pb.cc  task_manager_grpcapi.pub.pb.h
src/anduril/tasks/ad/desertguardian/common/v1/: common_tasks.pub.grpc.pb.cc  common_tasks.pub.grpc.pb.h  common_tasks.pub.pb.cc  common_tasks.pub.pb.h
src/anduril/tasks/v2/: catalog.pub.grpc.pb.cc  catalog.pub.grpc.pb.h  catalog.pub.pb.cc  catalog.pub.pb.h  common.pub.grpc.pb.cc  common.pub.grpc.pb.h  common.pub.pb.cc  common.pub.pb.h  objective.pub.grpc.pb.cc  objective.pub.grpc.pb.h  objective.pub.pb.cc  objective.pub.pb.h
src/anduril/tasks/v2/shared/: isr.pub.grpc.pb.cc  isr.pub.grpc.pb.h  isr.pub.pb.cc  isr.pub.pb.h  maneuver.pub.grpc.pb.cc  maneuver.pub.grpc.pb.h  maneuver.pub.pb.cc  maneuver.pub.pb.h  strike.pub.grpc.pb.cc  strike.pub.grpc.pb.h  strike.pub.pb.cc  strike.pub.pb.h
src/anduril/type/: attribution.pub.grpc.pb.cc  attribution.pub.grpc.pb.h  attribution.pub.pb.cc  attribution.pub.pb.h  color.pub.grpc.pb.cc  color.pub.grpc.pb.h  color.pub.pb.cc  color.pub.pb.h  coords.pub.grpc.pb.cc  coords.pub.grpc.pb.h  coords.pub.pb.cc  coords.pub.pb.h  geometry.pub.grpc.pb.cc  geometry.pub.grpc.pb.h  geometry.pub.pb.cc  geometry.pub.pb.h  orbit.pub.grpc.pb.cc  orbit.pub.grpc.pb.h  orbit.pub.pb.cc  orbit.pub.pb.h
src/protos/anduril/entitymanager/v1/: contact_details.pub.proto  correlations.pub.proto  relationship.pub.proto
src/protos/anduril/taskmanager/v1/: task_manager_openapi.pub.yaml
(+4 files in other folders)
